Fix invisible link text in PricingTable (#899)

--- a/website/src/components/PricingTable.module.css
+++ b/website/src/components/PricingTable.module.css
@@ -14,3 +14,8 @@
   color: var(--ifm-font-color-base-inverse);
   border-radius: 1rem;
 }
+
+.features a:not(:global(.button)) {
+  color: var(--ifm-font-color-base-inverse);
+  text-decoration: underline;
+}
